# ucli

./: LICENSE  README.md  TODO.md  api_bug.txt  pyproject.toml
.pylint_cache/: ucli_1.stats
src/ucli/: __init__.py  __main__.py
src/ucli/cli/: main.py  options.py  render.py  site_scoped.py  types.py
src/ucli/cli/commands/: networks.py  sites.py
src/ucli/client/: client.py  factory.py
src/ucli/client/models/: client.py  config.py  filters.py  network.py  networks.py  options.py  site.py  sites.py
src/ucli/client/resources/: base.py  network.py  networks.py  site.py  site_resource.py  sites.py
src/ucli/cmd/: cmd.py  main.py  render.py
src/ucli/cmd/commands/: networks.py  sites.py
