[project]
name = "ucli"
version = "0.1.0"
description = "The ugly unifi network api python cli"
authors = [
    {name = "Pauli Huttunen", email = "pauli.k.huttunen@gmail.com"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
    "rich>=14.2.0",
    "typer>=0.21.1",
]

[project.scripts]
ucli = "ucli:app"

[tool.uv.scripts]
fmt = "black src"
lint-imports = "isort --check-only src"
lint = "pylint src"

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
known_first_party = ["ucli"]

[build-system]
requires = ["uv_build>=0.9.28,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "black>=26.1.0",
    "isort>=7.0.0",
    "pylint>=4.0.4",
]

